# wrapper-type

./: CMakeLists.txt  README.md
nix/: flake.nix  shell.nix
src/: ops.cppm  utils.cppm  wrap.cppm  wrapper.cppm
tests/: CMakeLists.txt  wrapper_tests.cpp
